Updated patient table.

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.MuiDataGrid-row.Mui-odd {
+  background-color: aliceblue;
+}
+
+.MuiDataGrid-root .MuiDataGrid-cell:focus-within {
+  outline: none !important;
+}
