Fix sider transition lag and scroll.

--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,10 @@
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  height: 100%;
 }
 
 code {
@@ -60,10 +51,9 @@ code {
   }
 }
 
-.MuiDataGrid-row.Mui-odd {
-  background-color: aliceblue;
-}
+/* Fix for lagging sider height on screen resize. */
 
-.MuiDataGrid-root .MuiDataGrid-cell:focus-within {
-  outline: none !important;
+.ant-layout-sider {
+  transition: width 0.2s ease-in-out, max-width 0.2s ease-in-out,
+    min-width 0.2s ease-in-out !important;
 }
