--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,25 @@ code {
   transition: width 0.2s ease-in-out, max-width 0.2s ease-in-out,
     min-width 0.2s ease-in-out !important;
 }
+
+.pulsate {
+  animation: shadowPulse 1s infinite linear;
+}
+
+@keyframes shadowPulse {
+  0% {
+    box-shadow: 0 0 8px 6px transparent, 0 0 0 0 transparent,
+      0 0 0 0 transparent;
+  }
+
+  10% {
+    box-shadow: 0 0 8px 6px #e1434baa, 0 0 12px 10px transparent,
+      0 0 12px 5px #e1434baa;
+  }
+
+  80%,
+  100% {
+    box-shadow: 0 0 8px 6px transparent, 0 0 0 10px transparent,
+      0 0 0 10px transparent;
+  }
+}
